# card-generator

./: .gitignore  Pipfile  README.md  default.conf  pyproject.toml  run.py  run.sh
public/: 404.html  50x.html  generate-cards.html  index.html  qr-code-generator.html
