[tool.poetry]
name = "rssi_card_geneator"
version = "0.1.0"
description = ""
authors = ["Zeeshan Khan <zkhan1093@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
